--- a/estilospagina.css
+++ b/estilospagina.css
@@ -64,7 +64,7 @@ header.contenedor {
 	}
 }
 div.a {
-  width: 65%;
+  width: 92%;
   padding: 15px;
   border: 2px;
   margin: 0;
@@ -202,7 +202,7 @@ img.c{
 }
 .botones:hoover{
 	cursor: pointer;
-	transform: scale(1.2,1.2);
+	transform: rgb(17, 219, 246);
 }
 .atras{
 	left: 2%;
@@ -248,4 +248,28 @@ img.c{
     }
 
 	}
+
+
+nav.pie {
+  width: 100%;
+	height: 200px;
+	background-color: rgb(208, 221, 223);
+	position: absolute;
+	top: 4000px;
+	border-color: rgb(33, 67, 102);
+	border: 4px;
+
+
+}
+
+.lpie {
+
+	font-family: 'Pacifico',cursive;
+}
+
+h1.c{
+font-size: 50px;
+
+
+
 }
