con implemento de imagenes

--- a/estilospagina.css
+++ b/estilospagina.css
@@ -252,7 +252,7 @@ img.c{
 
 nav.pie {
   width: 100%;
-	height: 200px;
+	height: 300px;
 	background-color: rgb(208, 221, 223);
 	position: absolute;
 	top: 4000px;
@@ -269,6 +269,77 @@ nav.pie {
 
 h1.c{
 font-size: 50px;
+
+
+
+}
+
+::-webkit-input-placeholder { /* Edge */
+color: darkcyan;
+
+}
+
+:-ms-input-placeholder { /* Internet Explorer */
+color: darkcyan;
+
+}
+
+::placeholder {
+color:darkcyan;
+
+}
+input[type=text] {
+ width: 88%;
+padding: 7px 0px;
+margin: 6px 5px;
+box-sizing: border-box;
+border: none;
+border-bottom: 2px solid blue;
+
+
+}
+input[type=email] {
+ width: 88%;
+padding: 7px 0px;
+margin: 6px 5px;
+box-sizing: border-box;
+border: none;
+border-bottom: 2px solid blue;
+
+
+}
+input[type=password] {
+ width: 88%;
+padding: 7px 0px;
+margin: 6px 5px;
+box-sizing: border-box;
+border: none;
+border-bottom: 2px solid blue;
+
+
+}
+input[type=submit] {
+width: 80%;
+padding: 10px 0px;
+margin: 6px 0;
+border: none;
+background-color: lightblue;
+font-size: 17px;
+border-radius: 20px;
+color: blue;
+
+
+}
+
+
+div.reg {
+width: 360px;
+padding: 10px;
+border: 0px solid black;
+margin: 31px;
+height: 438px;
+background-color: white;
+
 
 
 
