--- a/cuestionario.css
+++ b/cuestionario.css
@@ -8,7 +8,7 @@ a  {
 	text-decoration: none;
 }
 #pantallacuestionario {
-	width: 46%;
+	width: 53%;
 	font-size: 100%;
 	background-color: white ;
 	padding: 20px;
@@ -25,6 +25,14 @@ a  {
  	border: 2px rgb(33, 156, 152);
 
 }
+#contex{
+width: 90%;
+height: 300px;
+
+
+
+}
+
 @media(max-width: 1100px) {
 #pantallacuestionario {
 	width: 90%;
