--- a/estilospagina.css
+++ b/estilospagina.css
@@ -2,16 +2,6 @@
 @import url(banner.css);
 @import url(imagenes.css);
 
-
-h1,h3,h2,p{
-	color: #124670;
-}
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-
-}
 body {
 	font-family: 'Pacifico';
 	}
@@ -27,9 +17,69 @@ header {
 	z-index: 100;
 }
 
+/*Haches */
+
+h1,h3,h2,p{
+	color: #124670;
+}
+
 h1.s {
     font-size: 250%;
     float: left;
+     }
+
+h1.a {
+	 width: 150%;
+	 font-size: 150%;
+     }
+
+h1.c {
+font-size: 50px;
+
+      }
+
+h1.nota  {
+	font-size: 490%;
+       }
+
+/*fin de haches*/
+/*imgs */
+
+	 img.hoja1 {
+			 	width: 28%;
+			 	height: 13%;
+			 }
+	img.icfes {
+				width: 44%;
+				height: 44%;
+			 	margin: 30px 40px;
+			}
+	img.logo2 {
+				width: 32%;
+				height: 40%;
+
+			}
+			img.col {
+				position: absolute;
+				top: 3700px;
+			}
+			img {
+
+	 	 	border-radius:none
+	 	 	padding: none;
+	 	     height: 49px;
+
+	 	 }
+		 img.c{
+	 		width: 100%;
+	 		height: 100%;
+	 	}
+
+/*fin de imgs*/
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 
 }
 
@@ -38,16 +88,11 @@ h1.s {
      font-size: 37px;
 
 }
+
+/*Aqui empiezan sections, divs,headers y navs*/
 .contenedor{
 	width: 80%;
 	margin: auto;
-}
-img {
-
-	border-radius:none
-	padding: none;
-    height: 49px;
-
 }
 header.contenedor {
    display:table;
@@ -57,12 +102,6 @@ header.contenedor {
  	margin-bottom: 25px;
  }
 
-
-@media (min-width: 1024px){
-	.contenedor{
-		width: 1160px;
-	}
-}
 div.a {
   width: 92%;
   padding: 15px;
@@ -77,13 +116,6 @@ div.a {
  	margin-bottom: 25px;
  	height: 200%;
  }
- h1.a {
-    width: 150%;
-    font-size: 150%;
-
-
-
- }
  section.primerpagina{
  	background-color: #b5ffff;
  	width: 92%;
@@ -97,23 +129,6 @@ div.a {
 	 height: 80%;
 
  }
- img.hoja1 {
- 	width: 28%;
- 	height: 13%;
- }
-img.icfes {
-	width: 44%;
-	height: 44%;
- 	margin: 30px 40px;
-}
-img.logo2 {
-
-	width: 32%;
-	height: 40%;
-
-}
-
-
 
 }
 div.segundapagina {
@@ -128,10 +143,6 @@ div.sui {
 
 }
 
-img.col {
-	position: absolute;
-	top: 3700px;
-}
 
 
 td {
@@ -173,12 +184,6 @@ button.r:hover {
 	background-color: rgba(0,0,0,0.1);
 }
 
-
-img.c{
-	width: 100%;
-	height: 100%;
-}
-
 .contenedo{
 	width: 92%;
 	position: relative;
@@ -217,6 +222,179 @@ img.c{
 	height: 44px;
 	color: red;
 }
+
+nav.pie {
+  width: 100%;
+	height: 300px;
+	background-color: rgb(208, 221, 223);
+	position: absolute;
+	top: 4000px;
+	border-color: rgb(33, 67, 102);
+	border: 4px;
+
+
+}
+
+.lpie {
+
+	font-family: 'Pacifico',cursive;
+}
+
+
+::-webkit-input-placeholder { /* Edge */
+color: darkcyan;
+
+}
+
+:-ms-input-placeholder { /* Internet Explorer */
+color: darkcyan;
+
+}
+
+::placeholder {
+color:darkcyan;
+
+}
+
+
+
+div.reg {
+width: 360px;
+padding: 10px;
+border: 0px solid black;
+margin: 31px;
+height: 438px;
+background-color: white;
+
+
+}
+
+nav.cal{
+	width: 828px;
+	height: 592px;
+	background-color: white;
+	position: absolute;
+	top: 70px;
+	left: calc(40% - 218px);
+	border: 2px solid black;
+	border-color: black;
+
+}
+
+
+
+button.video{
+  width: 150px;
+	height: 108px;
+
+
+}
+a.s{
+		font-size: 180%;
+
+}
+
+/*aqui empiezan SOLO inputs*/
+
+input[type=text] {
+ width: 88%;
+padding: 7px 0px;
+margin: 6px 5px;
+box-sizing: border-box;
+border: none;
+border-bottom: 2px solid blue;
+
+
+}
+input[type=email] {
+ width: 88%;
+padding: 7px 0px;
+margin: 6px 5px;
+box-sizing: border-box;
+border: none;
+border-bottom: 2px solid blue;
+
+
+}
+input[type=password] {
+ width: 88%;
+padding: 7px 0px;
+margin: 6px 5px;
+box-sizing: border-box;
+border: none;
+border-bottom: 2px solid blue;
+
+
+}
+
+/*botones tipo file */
+input[type=file] {
+
+width: 260px;
+height: 30px;
+padding: 3px 0px;
+margin: 2px 1px;
+border: 2px solid blue;
+
+/*aqui terminan los botones tipo file */
+
+
+
+}
+/*Botones de enviar   */
+input.sf[type=submit] {
+
+width: 30%;
+height: 40px;
+padding: 4px 0px;
+margin: 3px 0;
+border: none;
+background-color: rgb(98, 10, 241);
+font-size: 20px;
+border-radius: 20px;
+color: rgb(22, 241, 241);
+
+
+}
+input.sf:hover[type=submit] {
+	background-color: rgba(92, 15, 235, 0.42);
+
+}
+.i{
+	width: 74%;
+	padding: 16px 0px;
+	margin: 4px 0;
+	box-sizing: border-box;
+	border: none;
+	background-color: white;
+	font-size: 'Pacifico';
+	font-weight: bold;
+	color: #124670;
+	decoration: none;
+	top: 670px;
+	font-size: 17px;
+	border-radius: 20px;
+
+}
+input.b[type=submit] {
+width: 210px;
+padding: 10px 0px;
+margin: 6px 0;
+border: none;
+background-color: lightblue;
+font-size: 17px;
+border-radius: 20px;
+color: blue;
+
+
+}
+
+/* aqui terminan los botones de enviar */
+
+/*aqui terminan los inputs*/
+
+/* aqui empiezan SOLO @medias */
+
 @media(max-width: 830px) {
 	.atras{
 		width: 50px;
@@ -248,99 +426,10 @@ img.c{
     }
 
 	}
+	@media (min-width: 1024px){
+		.contenedor{
+			width: 1160px;
+		}
+	}
 
-
-nav.pie {
-  width: 100%;
-	height: 300px;
-	background-color: rgb(208, 221, 223);
-	position: absolute;
-	top: 4000px;
-	border-color: rgb(33, 67, 102);
-	border: 4px;
-
-
-}
-
-.lpie {
-
-	font-family: 'Pacifico',cursive;
-}
-
-h1.c{
-font-size: 50px;
-
-
-
-}
-
-::-webkit-input-placeholder { /* Edge */
-color: darkcyan;
-
-}
-
-:-ms-input-placeholder { /* Internet Explorer */
-color: darkcyan;
-
-}
-
-::placeholder {
-color:darkcyan;
-
-}
-input[type=text] {
- width: 88%;
-padding: 7px 0px;
-margin: 6px 5px;
-box-sizing: border-box;
-border: none;
-border-bottom: 2px solid blue;
-
-
-}
-input[type=email] {
- width: 88%;
-padding: 7px 0px;
-margin: 6px 5px;
-box-sizing: border-box;
-border: none;
-border-bottom: 2px solid blue;
-
-
-}
-input[type=password] {
- width: 88%;
-padding: 7px 0px;
-margin: 6px 5px;
-box-sizing: border-box;
-border: none;
-border-bottom: 2px solid blue;
-
-
-}
-input[type=submit] {
-width: 80%;
-padding: 10px 0px;
-margin: 6px 0;
-border: none;
-background-color: lightblue;
-font-size: 17px;
-border-radius: 20px;
-color: blue;
-
-
-}
-
-
-div.reg {
-width: 360px;
-padding: 10px;
-border: 0px solid black;
-margin: 31px;
-height: 438px;
-background-color: white;
-
-
-
-
-}
+/*aqui terminan las medias*/
