--- a/estilospagina.css
+++ b/estilospagina.css
@@ -41,7 +41,10 @@ font-size: 50px;
 h1.nota  {
 	font-size: 490%;
        }
+h1.inicio{
+font-size: 300%;
 
+}
 /*fin de haches*/
 /*imgs */
 
@@ -83,6 +86,18 @@ h1.nota  {
 
 }
 
+a.vl{
+	width: 100px;
+	height: 100px;
+	text-decoration: none;
+	color: #000;
+  font-size: 290%;
+
+}
+a.vl:hover{
+ color: rgba(27, 166, 196, 0.64);
+
+}
 
 #getbetter{
      font-size: 37px;
@@ -103,14 +118,62 @@ header.contenedor {
  }
 
 div.a {
-  width: 92%;
-  padding: 15px;
+  width: 500px;
+	height: 128px;
+  padding: 10px;
   border: 2px;
   margin: 0;
   background-color: white;
 
-      }
 
+      }
+			div.al {
+			  width: 494px;
+			  padding: 10px;
+			  border: 2px;
+			  margin: 0;
+			  background-color: rgba(11, 152, 190, 0.65);
+
+
+			      }
+						div.al2 {
+							width: 514px;
+							padding: 10px;
+							border: 2px;
+							margin: 0;
+							background-color: rgba(203, 49, 179, 0.49);
+							position: absolute;
+							left: calc(60%);
+							top:357px;
+
+
+									}
+div.ventanapub{
+width: 550px;
+height: 440px;
+margin: 2px 3px;
+padding: 14px;
+position: absolute;
+top: 123px;
+left: calc(31% );
+background-color: rgba(4, 57, 217, 0.84);
+display: none;
+
+
+}
+div.ventanapub2{
+width: 560px;
+height: 400px;
+margin: 2px 3px;
+padding: 14px;
+position: absolute;
+top: 120px;
+left: calc(31% );
+background-color: rgba(202, 226, 12, 0.8);
+display: none;
+
+
+}
  section {
  	width: 100%;
  	margin-bottom: 25px;
@@ -270,14 +333,16 @@ background-color: white;
 }
 
 nav.cal{
-	width: 828px;
+	width: 888px;
 	height: 592px;
 	background-color: white;
 	position: absolute;
 	top: 70px;
-	left: calc(40% - 218px);
+	left: calc(40% - 248px);
 	border: 2px solid black;
 	border-color: black;
+	margin: 6px 1px;
+	padding: 8px;
 
 }
 
@@ -313,6 +378,35 @@ margin: 6px 5px;
 box-sizing: border-box;
 border: none;
 border-bottom: 2px solid blue;
+
+
+}
+.context{
+
+width: 197%;
+height: 380px;
+padding: 3px 0px;
+margin: 2px 1px;
+border: 2px solid blue;
+
+}
+.pregunta{
+
+	width: 179%;
+	height: 194px;
+	padding: 3px 0px;
+	margin: 2px 1px;
+	border: 2px solid blue;
+
+
+}
+.opciones{
+
+	width: 177%;
+	height: 120px;
+	padding: 3px 0px;
+	margin: 2px 1px;
+	border: 2px solid blue;
 
 
 }
@@ -374,6 +468,12 @@ input.sf:hover[type=submit] {
 	top: 670px;
 	font-size: 17px;
 	border-radius: 20px;
+
+
+}
+
+.i:hover{
+background-color: rgba(170, 239, 244, 0.74);
 
 }
 input.b[type=submit] {
